<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <com.huawei.powermanagement.BatteryIcon android:id="@id/battery_info" android:layout_width="320.0dip" android:layout_height="130.0dip" />
        <LinearLayout android:orientation="horizontal" android:id="@id/LinearLayout01" android:paddingLeft="15.0dip" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="?android:textColorPrimary" android:id="@id/current_mode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/current_mode" />
                <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="?android:textColorSecondary" android:id="@id/mode_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/performance_mode" android:layout_below="@id/current_mode" android:layout_alignLeft="@id/current_mode" />
            </RelativeLayout>
            <Button android:id="@id/change_mode" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/change_mode" android:height="50.0dip" android:width="89.0dip" />
        </LinearLayout>
        <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="1.0dip" />
    </LinearLayout>
</ScrollView>
